--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,3 +13,6 @@ nalgebra = "0.13.1"
 [dependencies.simple-fcl-sys]
 path = "simple-fcl-sys"
 version = "0.0.1"
+
+[dev-dependencies]
+assert = "0.7.4"
