--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,8 @@
 language: rust
-before_install:
-  - sudo apt-get -qq update
-  - sudo apt-get install -y libfcl-dev
+addons:
+  apt:
+    packages:
+      - libfcl-dev
 rust:
   - stable
   - beta
