--- a/.travis.yml
+++ b/.travis.yml
@@ -4,6 +4,8 @@ addons:
     sources:
       - sourceline: 'ppa:fcl-debs/ppa'
     packages:
+      - libccd-dev
+      - libfcl0
       - libfcl-dev
 rust:
   - stable
